--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "csv-parse": "^4.15.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "pm2": "^4.5.6"
   },
